Crash when adding # driver to Background Image location #40291

Closed
opened 2014-05-21 08:24:15 +02:00 by Greg Zaal · 5 comments
Member

System Information
Windows 7 64 bit, Quadro 2000D

Blender Version
Built 2014-04-03, hash c6d8540

Short description of error
bg_image_crash.PNG
When adding a driver to the X location of a viewport background image using the text field and typing #frame, blender crashes when you hit enter.

This doesn't seem to be a bug for properties that aren't meant to be animated, since doing the same thing to the render resolution doesn't crash (although it does still add the animation datablock to the scene if you watch the outliner while trying it)

Exact steps for others to reproduce the error

  • Add a background image
  • Type #1 or #frame into any float property of the background image.
  • Crash!
**System Information** Windows 7 64 bit, Quadro 2000D **Blender Version** Built 2014-04-03, hash c6d8540 **Short description of error** ![bg_image_crash.PNG](https://archive.blender.org/developer/F89557/bg_image_crash.PNG) When adding a driver to the X location of a viewport background image using the text field and typing #frame, blender crashes when you hit enter. This doesn't seem to be a bug for properties that aren't meant to be animated, since doing the same thing to the render resolution doesn't crash (although it does still add the animation datablock to the scene if you watch the outliner while trying it) **Exact steps for others to reproduce the error** - Add a background image - Type #1 or #frame into any float property of the background image. - Crash!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

This issue was referenced by d203edfc93

This issue was referenced by d203edfc9384f8632fce122dc8313a4745799a86

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d203edfc93.

Closed by commit d203edfc93.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40291
No description provided.