Fix T40291: Crash when adding # driver to some fields